syntax = "proto3";

package com.road.yishi.proto.team;

message MemberFightPos {
  int32 memberId = 1;
  int32 pos = 2;
}
